# dinrail

./: .clang-format  .gitignore  AGENTS.md  CMakeLists.txt  README.md  colcon.pkg  pixi.toml
.github/workflows/: pixi-tests.yml  test.yml
cmake/: DinrailAddDevice.cmake  DinrailCMakeCommon.cmake  DinrailGlobalVersion.cmake
docs/: internals.md  naming-conventions.md  parameters.md  plugin-discovery.md  yarp-migration.md
docs/yarp-migration/: from-yarp-os-property-to-dinrail-parameters.md
examples/: CMakeLists.txt  README.md  pixi.toml
examples/implement-your-first-device/: CMakeLists.txt  MyDevice.cpp  MyDevice.h  README.md  main.cpp
examples/implement-your-first-device/MyInterfaceLib/: MyInterface.h
examples/yarp-conversions/: CMakeLists.txt  README.md  main.cpp
examples/yarp-migration/: CMakeLists.txt
examples/yarp-migration/fake-motion-control/: CMakeLists.txt
examples/yarp-migration/fake-motion-control/dinrail/: CMakeLists.txt  main.cpp
examples/yarp-migration/fake-motion-control/yarp/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt
src/cli/: CMakeLists.txt  dinrail.cpp
src/core/: CMakeLists.txt  dinrail-config.cmake.in
src/core/dinrail/: AdapterRegistry.cpp  AdapterRegistry.h  Constants.h  Device.cpp  Device.h  DeviceFactory.h  EigenHelpers.h  GenericVector.h  IAxisInfo.h  ICompatibilityLayer.h  IControlMode.h  IDevice.h  IEncoders.h  IImpedanceAllSetPointsControl.h  IPositionDirect.h  Parameters.cpp  Parameters.h  Placeholder.cpp  Placeholder.h  PluginUtils.cpp  PluginUtils.h  Property.cpp  Property.h  TemplateHelpers.h  Value.cpp  Value.h  VectorProxy.h  Vocab.cpp  Vocab.h
src/core/test/: CMakeLists.txt  GenericVectorTest.cpp  ParametersTest.cpp  PropertyComparisonTest.cpp  VectorProxyTest.cpp
src/devices/: CMakeLists.txt
src/devices/fake/fakeMotionControl/: CMakeLists.txt  FakeMotionControl.cpp  FakeMotionControl.h  README.md
src/devices/fake/fakeMotionControl/test/: CMakeLists.txt  FakeMotionControlAxisInfoTest.cpp  FakeMotionControlInterfacesTest.cpp
src/yarp/: CMakeLists.txt  YarpCompatibilityLayer.cpp  YarpCompatibilityLayer.h  YarpControlModeAdapter.cpp  YarpControlModeAdapter.h  YarpDeviceWrapper.cpp  YarpDeviceWrapper.h  YarpEncodersAdapter.cpp  YarpEncodersAdapter.h  YarpPositionDirectAdapter.cpp  YarpPositionDirectAdapter.h  YarpPropertyConverter.cpp  YarpPropertyConverter.h  dinrail-yarp-config.cmake.in
src/yarp-devices/: CMakeLists.txt
src/yarp-devices/ControlBoardNWCDinRailYARPPorts/: CMakeLists.txt  RemoteControlBoard.cpp  RemoteControlBoard_ParamsParser.cpp  RemoteControlBoard_ParamsParser.h  RemoteControlBoard_params.md
src/yarp-devices/ControlBoardNWSDinRailYARPPorts/: CMakeLists.txt  ControlBoard_nws_yarp.cpp  ControlBoard_nws_yarp_ParamsParser.cpp  ControlBoard_nws_yarp_ParamsParser.h  ControlBoard_nws_yarp_params.md
src/yarp-devices/ControlBoardNWSDinRailYARPPorts/tests/: controlBoard_nws_yarp_test.cpp
src/yarp-devices/ControlBoardRemapperDinRail/: CMakeLists.txt
src/yarp-devices/ControlBoardRemapperDinRail/tests/: controlBoardRemapper_t1_test.cpp  controlBoardRemapper_t2_test.cpp  controlBoardRemapper_t3_test.cpp
src/yarp-devices/dr_controlboard_nwc_yarp/: CMakeLists.txt  DinRailControlBoardNWCYarp.cpp  DinRailControlBoardNWCYarp.h  DinRailControlBoardNWCYarpLogComponent.cpp  DinRailControlBoardNWCYarp_ParamsParser.cpp  DinRailControlBoardNWCYarp_ParamsParser.h  RemoteControlBoard_ParamsParser.h  stateExtendedReader.cpp  stateExtendedReader.h
src/yarp-devices/dr_controlboard_nwc_yarp/tests/: CMakeLists.txt  DinRailControlBoardNWCYarp_test.cpp  RemoteControlBoard_test.cpp
src/yarp-devices/dr_controlboard_nws_yarp/: CMakeLists.txt  ControlBoard_nws_yarp_ParamsParser.h  DinRailControlBoardNWSYarp.cpp  DinRailControlBoardNWSYarp.h  DinRailControlBoardNWSYarp_ParamsParser.cpp  DinRailControlBoardNWSYarp_ParamsParser.h  RPCMessagesParser.cpp  RPCMessagesParser.h
src/yarp-devices/dr_controlboard_nws_yarp/tests/: CMakeLists.txt  controlBoard_nws_yarp_test.cpp
src/yarp-devices/dr_controlboard_remapper/: CMakeLists.txt  DinRailControlBoardRemapper.cpp  DinRailControlBoardRemapper.h  DinRailControlBoardRemapperHelpers.cpp  DinRailControlBoardRemapperHelpers.h  DinRailControlBoardRemapperLogComponent.cpp  DinRailControlBoardRemapperNWCYarp.cpp  DinRailControlBoardRemapperNWCYarp.h  RemoteControlBoardRemapper.cpp
src/yarp-devices/dr_controlboard_remapper/tests/: CMakeLists.txt  controlBoardRemapper_t1_test.cpp  controlBoardRemapper_t2_test.cpp  controlBoardRemapper_t3_test.cpp
src/yarp-devices/shared/: CMakeLists.txt
src/yarp-devices/shared/dinrail/: ControlBoardYARPProtocolVersion.h
src/yarp-devices/shared/dinrail/yarp/dev/tests/: IControlModeTest.h  ICurrentControlTest.h  IJointFaultTest.h  IMotorEncodersTest.h  IMotorTest.h  ITorqueControlTest.h
src/yarp-devices/shared/idl/: ControlBoardYARPJointData.thrift
src/yarp-devices/shared/idl_generated_code/: ControlBoardYARPJointData_index.txt
src/yarp-devices/shared/idl_generated_code/dinrail/: ControlBoardYARPJointData.cpp  ControlBoardYARPJointData.h
src/yarp-devices/test-helpers/: CMakeLists.txt
src/yarp-devices/test-helpers/dinrail/yarp/dev/tests/: IAxisInfoTest.h  IControlLimitsTest.h  IEncodersTimedTest.h  IImpedanceControlTest.h  IInteractionModeTest.h  IPWMControlTest.h  IPidControlTest.h  IPositionControlTest.h  IRemoteCalibratorTest.h  IVelocityControlTest.h
src/yarp/dinrail/: YarpAxisInfoAdapter.cpp  YarpAxisInfoAdapter.h  YarpCompatibilityLayer.cpp  YarpCompatibilityLayer.h  YarpDeviceWrapper.cpp  YarpDeviceWrapper.h  YarpPropertyConverter.cpp  YarpPropertyConverter.h
src/yarp/test/: BLFParametersHandlerCompatibilityTest.cpp  CMakeLists.txt  PropertyConverterTest.cpp  ValueCompatibilityTest.cpp  VocabCompatibilityTest.cpp
src/yarp/test/data/: fingers-scaling-only.ini  qpIKBLF.ini  robot-dynamics-estimator.xml
src/yarp/test/data/tasks/: regularization.ini
test/: CMakeLists.txt
