# SPDX-FileCopyrightText: 2026 dinrail contributors
# SPDX-License-Identifier: BSD-3-Clause

# Integration tests for dinrail

# Example test (uncomment when tests are added)
# add_executable(test_device test_device.cpp)
# target_link_libraries(test_device PRIVATE dinrail::dinrail)
# add_test(NAME test_device COMMAND test_device)
